--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "expo": "~51.0.28",
     "expo-font": "~12.0.10",
     "expo-image-picker": "~15.0.7",
